@@ -14,10 +14,6 @@
 
 ======== Code ==========================================================
 
-(-) Finish releasing tool (freshmeat, RAA, cleanup)
-
-(-) Automatic release
-
 (-) Music
 
 (-) Some teleporting animation
